--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -47,6 +47,7 @@ body {
     display: flex;
     justify-content: center;
     border-radius: 10px;
+    margin: 13px;
     padding: 20px;
     width: fit-content;
 
